Add Java module support
Move generated Epilogue class to `org.wpilib.epilogue.generated` package to avoid split packages across modules

Move Preferences class to `org.wpilib.preferences` package to avoid split packages with wpiutil (which owns the `org.wpilib.util` package)